tests/base/valid/IntConst_Valid_1.whiley
void System::main([string] args):
    x = 1234567891011121314151617181920
    x = x + 1
    out->println(str(x))
